[gd_scene load_steps=27 format=3 uid="uid://cui2kug5rt61c"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_7kdwk"]
[ext_resource type="Texture2D" uid="uid://cghl0k4qadngg" path="res://Assets/Sprites.png" id="1_36umv"]
[ext_resource type="Script" path="res://Scripts/raycasts.gd" id="3_0xavu"]
[ext_resource type="Script" path="res://Scripts/bomb_placement_sys.gd" id="4_87hob"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vvkti"]
atlas = ExtResource("1_36umv")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dx63"]
atlas = ExtResource("1_36umv")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2rsf"]
atlas = ExtResource("1_36umv")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwafq"]
atlas = ExtResource("1_36umv")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pwbw"]
atlas = ExtResource("1_36umv")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gqhl"]
atlas = ExtResource("1_36umv")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d855"]
atlas = ExtResource("1_36umv")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_18di1"]
atlas = ExtResource("1_36umv")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eht4"]
atlas = ExtResource("1_36umv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_entnw"]
atlas = ExtResource("1_36umv")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l6sg"]
atlas = ExtResource("1_36umv")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gouqk"]
atlas = ExtResource("1_36umv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_05rga"]
atlas = ExtResource("1_36umv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4ckg"]
atlas = ExtResource("1_36umv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdcjg"]
atlas = ExtResource("1_36umv")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7mdn"]
atlas = ExtResource("1_36umv")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd21d"]
atlas = ExtResource("1_36umv")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_usa5g"]
atlas = ExtResource("1_36umv")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_08gqa"]
atlas = ExtResource("1_36umv")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cky18"]
atlas = ExtResource("1_36umv")
region = Rect2(80, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gw3lp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvkti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dx63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2rsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwafq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pwbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gqhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d855")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18di1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eht4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_entnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l6sg")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gouqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05rga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4ckg")
}],
"loop": true,
"name": &"walk_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdcjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7mdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd21d")
}],
"loop": true,
"name": &"walk_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_usa5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08gqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cky18")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ogp4x"]
radius = 6.0
height = 14.0

[node name="Player" type="Area2D"]
z_index = 1
script = ExtResource("1_7kdwk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gw3lp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ogp4x")

[node name="Raycasts" type="Node2D" parent="."]
script = ExtResource("3_0xavu")

[node name="Horizontal" type="Node2D" parent="Raycasts"]

[node name="Left" type="Node2D" parent="Raycasts/Horizontal"]

[node name="LeftHorizontalTop" type="RayCast2D" parent="Raycasts/Horizontal/Left"]
position = Vector2(-2, -5)
target_position = Vector2(-2, 0)
collision_mask = 14
collide_with_areas = true

[node name="LeftHorizontalBottom" type="RayCast2D" parent="Raycasts/Horizontal/Left"]
position = Vector2(-2, 5)
target_position = Vector2(-2, 0)
collision_mask = 14
collide_with_areas = true

[node name="Right" type="Node2D" parent="Raycasts/Horizontal"]

[node name="RightHorizontalTop" type="RayCast2D" parent="Raycasts/Horizontal/Right"]
position = Vector2(2, -5)
target_position = Vector2(2, 0)
collision_mask = 14
collide_with_areas = true

[node name="RightHorizontalBottom" type="RayCast2D" parent="Raycasts/Horizontal/Right"]
position = Vector2(2, 5)
target_position = Vector2(2, 0)
collision_mask = 14
collide_with_areas = true

[node name="Vertical" type="Node2D" parent="Raycasts"]

[node name="Top" type="Node2D" parent="Raycasts/Vertical"]

[node name="TopVerticalLeft" type="RayCast2D" parent="Raycasts/Vertical/Top"]
position = Vector2(-2, -4)
target_position = Vector2(0, -2)
collision_mask = 14
collide_with_areas = true

[node name="TopVerticalRight" type="RayCast2D" parent="Raycasts/Vertical/Top"]
position = Vector2(2, -4)
target_position = Vector2(0, -2)
collision_mask = 14
collide_with_areas = true

[node name="Bottom" type="Node2D" parent="Raycasts/Vertical"]

[node name="BottomVerticalLeft" type="RayCast2D" parent="Raycasts/Vertical/Bottom"]
position = Vector2(-2, 4)
target_position = Vector2(0, 2)
collision_mask = 14
collide_with_areas = true

[node name="BottomVerticalRight" type="RayCast2D" parent="Raycasts/Vertical/Bottom"]
position = Vector2(2, 4)
target_position = Vector2(0, 2)
collision_mask = 14
collide_with_areas = true

[node name="BombPlacementSys" type="Node2D" parent="."]
script = ExtResource("4_87hob")
